--- a/.github/workflows/docker-commit.yml
+++ b/.github/workflows/docker-commit.yml
@@ -3,10 +3,10 @@ name: Docker Commit
 on:
   push:
     branches:
-      - "*"
+      - "dev"
   pull_request:
     branches:
-      - "*"
+      - "dev"
     tags-ignore:
       - "*"
 
