--- a/.github/workflows/docker-image-push.yml
+++ b/.github/workflows/docker-image-push.yml
@@ -21,7 +21,7 @@ jobs:
       run: |
         docker login -u $DOCKER_USER -p $DOCKER_PASSWORD 
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag xander81/pinger-keti:$(date +%s)
+      run: docker build . --file Dockerfile --tag xander81/pinger-keti
       
     - name: Docker Push
       run: docker push xander81/pinger-keti
