--- a/.github/workflows/docker-image-push.yml
+++ b/.github/workflows/docker-image-push.yml
@@ -2,26 +2,59 @@ name: Docker Image CI
 
 on:
   push:
-    branches: [ "dev" ]
+    branches: ["dev"]
   pull_request:
-    branches: [ "dev" ]
+    branches: ["dev"]
+
+env:
+  DOCKERHUB_USERNAME: ${{ secrets.DOCKER_REGISTRY_USERNAME }}
+  DOCKERHUB_TOKEN: ${{ secrets.DOCKER_REGISTRY_TOKEN }}
+  AWS_PRIVATE_KEY: ${{ secrets.AWS_PRIVATE_KEY }}
+  SOCKETI_INSTANCE_IP: ${{ secrets.SOCKETI_INSTANCE_IP }}
 
 jobs:
-
   build:
-
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v3
-    - name: Build the Docker image
-      env:
-        DOCKER_USER: ${{secrets.DOCKER_REGISTRY_USERNAME}}
-        DOCKER_PASSWORD: ${{secrets.DOCKER_REGISTRY_TOKEN}}
-      run: |
-        docker login -u $DOCKER_USER -p $DOCKER_PASSWORD 
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag xander81/pinger-keti
-      
-    - name: Docker Push
-      run: docker push xander81/pinger-keti
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ env.DOCKERHUB_USERNAME }}
+          password: ${{ env.DOCKERHUB_TOKEN }}
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v2
+        with:
+          context: ./
+          push: true
+          dockerfile: ./Dockerfile
+          tags: xander81/pinger-keti:latest
+
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ env.DOCKERHUB_USERNAME }}
+          password: ${{ env.DOCKERHUB_TOKEN }}
+      - name: Set permissions for private key
+        run: |
+          echo "${{ env.AWS_PRIVATE_KEY }}" > key.pem
+          chmod 600 key.pem
+      - name: Pull Docker image
+        run: |
+          ssh -o StrictHostKeyChecking=no -i key.pem ${{ env.SOCKETI_INSTANCE_IP }} 'sudo docker pull xander81/pinger-keti:latest'
+      - name: Stop running container
+        run: |
+          ssh -o StrictHostKeyChecking=no -i key.pem ${{ env.SOCKETI_INSTANCE_IP }} 'sudo docker stop pinger-keti || true'
+          ssh -o StrictHostKeyChecking=no -i key.pem ${{ env.SOCKETI_INSTANCE_IP }} 'sudo docker rm pinger-keti || true'
+      - name: Run new container
+        run: |
+          ssh -o StrictHostKeyChecking=no -i key.pem ${{ env.SOCKETI_INSTANCE_IP }} 'sudo docker run -d --name pinger-keti -p 6001:6001 xander81/pinger-keti:latest'
