--- a/.github/workflows/docker-image-push.yml
+++ b/.github/workflows/docker-image-push.yml
@@ -10,8 +10,6 @@ env:
   DOCKERHUB_USERNAME: ${{ secrets.DOCKER_REGISTRY_USERNAME }}
   DOCKERHUB_TOKEN: ${{ secrets.DOCKER_REGISTRY_TOKEN }}
   AWS_PRIVATE_KEY: ${{ secrets.AWS_PRIVATE_KEY }}
-  SOCKETI_INSTANCE_IP: ${{ secrets.SOCKETI_INSTANCE_IP }}
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -57,4 +55,4 @@ jobs:
           ssh -o StrictHostKeyChecking=no -i key.pem ubuntu@ec2-54-160-189-158.compute-1.amazonaws.com 'sudo docker rm pinger-keti || true'
       - name: Run new container
         run: |
-          ssh -o StrictHostKeyChecking=no -i key.pem ubuntu@ec2-54-160-189-158.compute-1.amazonaws.com 'sudo docker run -d --env-file ~/env.list --name pinger-keti -p 6001:6001 xander81/pinger-keti:latest'
+          ssh -o StrictHostKeyChecking=no -i key.pem ubuntu@ec2-54-160-189-158.compute-1.amazonaws.com 'sudo docker run -d --env-file ~/env.list --mount type=bind,source="$(pwd)"/keys,target=/keys --name pinger-keti -p 6001:6001 xander81/pinger-keti:latest'
