--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "dot-wild": "^3.0.1",
     "dotenv": "^16.0.1",
     "ioredis": "^5.0.4",
+    "isolated-vm": "^4.6.0",
     "knex": "^3.0.1",
+    "mingo": "^6.4.8",
     "mysql": "^2.18.1",
     "mysql2": "^3.5.2",
     "nats": "^2.7.1",
@@ -67,7 +69,7 @@
     "@typescript-eslint/parser": "^5.33.1",
     "body-parser": "^1.20.0",
     "eslint": "^8.6.0",
-    "express": "^4.18.1",
+    "express": "^4.18.2",
     "jest": "^26.6.3",
     "jest-circus": "^26.6.3",
     "pusher-js": "^7.1.1-beta",
